--- a/狗INFP-T.html
+++ b/狗INFP-T.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <title>狗INFP-T</title>
-        <meta
-            name="viewport"
-            content="height=device-height, initial-scale=0.9"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=0.9" />
         <link rel="icon" href="assets/䈎面圖標/小丑INFP.png" type="image/png" />
         <link
             rel="preload"
