更改好多界面UI

--- a/日誌.html
+++ b/日誌.html
@@ -49,6 +49,7 @@
                 color: white;
                 writing-mode: vertical-rl;
                 -webkit-writing-mode: vertical-rl;
+                margin: 50px;
             }
 
             .絵文字圖象 {
