--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 							<ul id="相關我列表" style="padding-right: 20px">
 								<li>我是<b><a href="/wiki.html?title=中國" target="_blank"
 											class="「中國」 wiki">中國</a></b>人:=&CHINA-FLAG=:</li>
-								<li><b>生辰</b>：<span class="時間">:=四七〇五·八月$扁=:</span></li>
-								<li><b>男性</b>　性取向不明確</li>
+								<li><b>生辰</b>：<span class="時間">:=四七〇五·八月$扁=:</span>　<b>室女宮</b>　<b>土象</b>　生肖<b>鼠</b></li>
+								<li><b>男性</b>　性取向不明確　理解多元性傾向　但只<a class="wiki" target="_blank" href="/wiki.html?title=性別四元論">性別四元論</a>
+								</li>
 								<li><b>ＭＢＴＩ</b>人格爲Ｔ類<a target="_blank"
 										href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC">調停者</a><a
 										href="/%E7%8B%97INFP-T.html" target="_blank" style="background:none;"><img
 											s-src="MBTI：INFP-T" style="width: 2em; float: up;"></img></a></li>
-								<li>尊重多元性傾向　認同只<a class="wiki" target="_blank" href="/wiki.html?title=性別四元論">性別四元論</a>
-								</li>
 								<li><b>編程語言 :=&CODE=:</b><br />學得很雜　譬如<a href="https://scratch.mit.edu/download"
 										target="_blank">SCRATCH</a><span>, </span><a>C++</a><span>,
 									</span><a>GDscript</a>都學過（或學校或自學）其餘主流語言都有了解或可讀</li>
