--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 							<img s-src="素景靑面怒視目多目" class="unselectable" style="float: left; width: 230px"
 								draggable="false" />
 							<img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"
-								style="width: 130px; image-rendering: pixelated; margin-right: -10px;" />
+								style="height: 300px; image-rendering: pixelated; margin-right: -10px;" />
 							<p>
 								我是<span style="font-family: 只需HanaMinA; font-weight: bold; font-size: 40px;">灋顯東石</span>
 							</p>
 							<p>這裏是我的个人网站</p>
 							<span>啓始日：</span><span class="時間" style="font-weight: bold">:=四七二〇·二月十七·戌正一刻$扁=:</span>
 							<br />
-							<span class="遮擋下" style="background-color: #000">事實我早些時就啓始了，在乍日誌</span>
+							<span class="遮擋下" style="background-color: #000">事實我早些時就啓始了<br />但只是日誌</span>
 						</div>
 						<div>
 							<h3>關於我</h3>
@@ -45,7 +45,8 @@
 								<li>我是<b><a href="/wiki.html?title=中國" target="_blank"
 											class="「中國」 wiki">中國</a></b>人:=&CHINA-FLAG=:</li>
 								<li><b>生辰</b>：<span class="時間">:=四七〇五·八月$扁=:</span>　<b>室女宮</b>　<b>土象</b>　生肖<b>鼠</b></li>
-								<li><b>男性</b>　性取向不明確　理解多元性傾向　但只<a class="wiki" target="_blank" href="/wiki.html?title=性別四元論">性別四元論</a>
+								<li><b>男性</b>　性取向不明確　理解多元性傾向　但只<a class="wiki" target="_blank"
+										href="/wiki.html?title=性別四元論">性別四元論</a>
 								</li>
 								<li><b>ＭＢＴＩ</b>人格爲Ｔ類<a target="_blank"
 										href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC">調停者</a><a
@@ -57,7 +58,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="塊" id="愛好">
+					<div class="塊" id="愛好" draggable="true">
 						<h3>愛好 :=&心=:</h3>
 						<ul>
 							<li><b>漢字</b>　來自世界的漢字：中國日本韓國漢字　<br />㗂越𡨸喃　𗼇𘝞　以及<p>恩其實主要是前面純漢字吧（笑）</p>
@@ -94,10 +95,34 @@
 							</script>
 						</span>
 					</div>
+					<div class="塊 一些䈎面">
+						<h2 style="">
+							一些䈎面
+						</h2>
+						<ul>
+							<li>尸</li>
+							<li>尸日卩</li>
+						</ul>
+					</div>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+	<!-- FC2計數器 開始 -->
+	<div id="計數器" class="unselectable" draggable="false">
+		<style>
+			#計數器 {
+				writing-mode: horizontal-tb;
+				display: flex;
+				position: fixed;
+				left: 0;
+				bottom: 0;
+			}
+		</style>
+		<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89507336"></script>
+		<noscript><img src="//counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
+	</div>
+	<!-- FC2計數器 結束 -->
 	<script>window.addMobileWarning();</script>
 </body>
 
