index，和修改添加部分圖標

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<li>我是<b><a href="/wiki.html?title=中國" target="_blank"
 											class="「中國」 wiki">中國</a></b>人:=&CHINA-FLAG=:</li>
 								<li><b>生辰</b>：<span class="時間">:=四七〇五·八月$扁=:</span>　<b>室女宮</b>　<b>土象</b>　生肖<b>鼠</b></li>
-								<li><b>男性</b>　性取向不明確　理解多元性傾向　但只<a class="wiki" target="_blank"
+								<li><b>男性</b>　理解多元性傾向支持<a class="wiki" target="_blank"
 										href="/wiki.html?title=性別四元論">性別四元論</a>
 								</li>
 								<li><b>ＭＢＴＩ</b>人格爲Ｔ類<a target="_blank"
@@ -58,7 +58,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="塊" id="愛好" draggable="true">
+					<div class="塊" id="愛好">
 						<h3>愛好 :=&心=:</h3>
 						<ul>
 							<li><b>漢字</b>　來自世界的漢字：中國日本韓國漢字　<br />㗂越𡨸喃　𗼇𘝞　以及<p>恩其實主要是前面純漢字吧（笑）</p>
@@ -95,14 +95,14 @@
 							</script>
 						</span>
 					</div>
-					<div class="塊 一些䈎面">
-						<h2 style="">
-							一些䈎面
+					<div id="我的䈎面" class="塊 ">
+						<h2>
+							:=&我的䈎面=: 我的䈎面
 						</h2>
-						<ul>
-							<li>尸</li>
-							<li>尸日卩</li>
-						</ul>
+						<div style="font-size:20px;">
+							<a href="/">✩　主䈎</a><br>
+							<a href="/日誌.html">✩　日誌</a><br>
+						</div>
 					</div>
 				</td>
 			</tr>
@@ -119,8 +119,12 @@
 				bottom: 0;
 			}
 		</style>
-		<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89507336"></script>
-		<noscript><img src="//counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
+		<div style="image-rendering: pixelated;">
+			<script language="javascript" type="text/javascript"
+				src="//counter1.fc2.com/counter.php?id=89507337"></script>
+			<noscript><img src="//counter1.fc2.com/counter_img.php?id=89507337" /></noscript> <noscript><img
+					src="//counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
+		</div>
 	</div>
 	<!-- FC2計數器 結束 -->
 	<script>window.addMobileWarning();</script>
