--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
-	<link rel="icon" s-href="䈎面圖標：erase_file" type="image/x-icon" />
+	<link rel="icon" s-href="䈎面圖標：主䈎" type="image/x-icon" />
 	<link rel="preload" href="/json/公共/私用字辭典.json" as="fetch" type="application/json" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
@@ -101,7 +101,8 @@
 						</h2>
 						<div style="font-size:20px;">
 							<a href="/">✩　主䈎</a><br>
-							<a href="/日誌.html">✩　日誌</a><br>
+							<a href="/日誌.html"><img s-src="䈎面圖標：日誌" alt="" style="width: 1em;">　日誌</a><br>
+							<a href="/404.html"><img s-src="䈎面圖標：尋无" alt="" style="width: 1em;">　尋无</a><br>
 						</div>
 					</div>
 				</td>
