一些轉換上的事情，還有index

--- a/index.html
+++ b/index.html
@@ -99,10 +99,13 @@
 						<h2>
 							:=&我的䈎面=: 我的䈎面
 						</h2>
+						<hr style="border-style: double;">
 						<div style="font-size:20px;">
 							<a href="/">✩　主䈎</a><br>
-							<a href="/日誌.html"><img s-src="䈎面圖標：日誌" alt="" style="width: 1em;">　日誌</a><br>
-							<a href="/404.html"><img s-src="䈎面圖標：尋无" alt="" style="width: 1em;">　尋无</a><br>
+							<a href="/日誌.html">:=&䈎面圖標：日誌&=:　日誌</a><br>
+							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
+							<hr>
+							<a href="https://github.com/soizo/">:=&GITHUB=:　GITHUB</a>
 						</div>
 					</div>
 				</td>
